feat(user): authenticate user using token
