# cmd/api/api.go
@@ -24,7 +24,7 @@ type config struct {
 	addr   string
 	apiURL string
 	db     dbConfig
-	mail mailConfig
+	mail   mailConfig
 	env    string
 }
 
@@ -36,7 +36,7 @@ type dbConfig struct {
 }
 
 type mailConfig struct {
-	exp time.Duration 
+	exp time.Duration
 }
 
 func (app *application) mount() http.Handler {
@@ -81,6 +81,7 @@ func (app *application) mount() http.Handler {
 		})
 
 		r.Route("/users", func(r chi.Router) {
+			r.Put("/activate/{token}", app.activateUserHandler)
 			r.Route("/{userID}", func(r chi.Router) {
 				r.Use(app.userContextMiddleware)
 
@@ -96,8 +97,8 @@ func (app *application) mount() http.Handler {
 		})
 
 		//public routes
-		r.Route("/authenticate",func(r chi.Router){
-			r.Post("/user",app.registerUserHandler)
+		r.Route("/authenticate", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
 		})
 
 	})
