# docs/swagger.yaml
@@ -33,6 +33,23 @@ definitions:
       user_id:
         type: integer
     type: object
+  main.RegisterUserPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 72
+        minLength: 3
+        type: string
+      username:
+        maxLength: 100
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
   main.UpdatePostPayload:
     properties:
       content:
@@ -44,6 +61,21 @@ definitions:
         type: array
       title:
         maxLength: 100
+        type: string
+    type: object
+  main.UserWithToken:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      token:
+        type: string
+      username:
         type: string
     type: object
   main.healthResponse:
@@ -134,6 +166,8 @@ definitions:
         type: string
       id:
         type: integer
+      is_active:
+        type: boolean
       username:
         type: string
     type: object
@@ -149,6 +183,36 @@ info:
   termsOfService: http://swagger.io/terms/
   title: GopherSocial API
 paths:
+  /authenticate/user:
+    post:
+      consumes:
+      - application/json
+      description: Register a User
+      parameters:
+      - description: User credentials
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterUserPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User Registered
+          schema:
+            $ref: '#/definitions/main.UserWithToken'
+        "400":
+          description: Invalid User Payload
+          schema: {}
+        "500":
+          description: Something went wrong
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Register a User
+      tags:
+      - authentication
   /health:
     get:
       description: API health check
@@ -458,6 +522,33 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Unfollow a user
+      tags:
+      - users
+  /users/activate/{token}:
+    put:
+      consumes:
+      - application/json
+      description: Activate User by token
+      parameters:
+      - description: token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: User Activated
+        "404":
+          description: User not found
+          schema: {}
+        "500":
+          description: Something went wrong
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Activate User
       tags:
       - users
   /users/feed:
